<?xml version="1.0" encoding="utf-8"?>
<!--
    ~ Copyright 2022 The TensorFlow Authors. All Rights Reserved.
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~       http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
-->
<resources>

    <string name="quote"> تعلم ، أشر ، تواصل </string>

    <string name="switch_camera">Switch Camera</string>
    <string name="fullscreen">Toggle Fullscreen</string>
    <string name="clear_history">Clear History</string>
    <string name="gesture_history">Gesture History</string>
    <string name="translated_phrase">Translated Phrase</string>

    <string name="app_logo_desc">Logo de l\'application</string>
    <string name="app_name">لوما</string>
    <string name="translate_title">الترجمة</string>
    <string name="translate_subtitle">ترجمة لغة الإشارة إلى العربية</string>
    <string name="train_title">التدريب</string>
    <string name="train_subtitle">تدرب على فهم لغة الإشارة</string>
    <string name="dictionary_title">القاموس</string>
    <string name="dictionary_subtitle">ابحث عن معاني الإشارات</string>


    <string name="media_pipe">MediaPipe</string>

    <string name="skip">Skip</string>


    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing
        maximum recognized results button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maximum recognized results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing
        threshold of recognized hand gesture results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing
        threshold of recognized hand gesture results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="tv_gallery_placeholder">انقر على (+) لإضافة صورة أو فيديو لبدء تشغيل أداة التعرف على الإيماءات.</string>

    <string name="label_inference_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_hand_detection_confidence_threshold">Detection
        Threshold</string>
    <string name="label_hand_tracking_confidence_threshold">Tracking
        Threshold</string>
    <string name="label_hand_presence_confidence_threshold">Presence
        Threshold</string>
    <string name="label_delegate">Delegate</string>
    <string name="home">الرئيسية</string>
    <string name="dictionary">القاموس\n</string>
    <string name="translate">الترجمة</string>
    <string name="train">التدرب</string>
    <string name="text_trainFr">تدريب لغة الإشارة</string>
    <string name="lettreTxt">حروف</string>
    <string name="sub_lettre">تعلم إشارات الحروف الأبجدية</string>
    <string name="numbers_txt">ارقام</string>
    <string name="chaleng_txt">تحديات</string>
    <string name="capture_enabled">تمكين الالتقاط</string>
    <string name="capture_disabled">تم ايقاف الالتقاط</string>
    <string name="text_cleared">تم مسح النص</string>
    <string name="error_prefix">error prefix</string>
    <string name="returning_to_camera">العودة الى الكاميرا</string>
    <string name="space_btn">مسافة</string>

    <!-- Words Section -->
    <string name="words_txt">كلمات</string>
    <string name="sub_words">تعلم إشارات الكلمات الشائعة</string>

    <!-- Quiz Section -->
    <string name="quiz_txt">اختبارات</string>
    <string name="sub_quiz">اختبر معرفتك بلغة الإشارة</string>


    <string name="continue_text">متابعة</string>
    <string name="welcome_title">مرحبًا بك في تطبيق لوما</string>
    <string name="welcome_message">الاستخدام بعض  المزايا، نحتاج إلى الوصول إلى الكاميرا الخاصة بك للتعرف على الإيماءات. تتم معالجة الفيديو محليًا ولا يتم تخزينه أبدًا.</string>
    <string name="permission_rationale_title">الكاميرا مطلوبة</string>
    <string name="permission_rationale_message">يستخدم هذا التطبيق الكاميرا لاكتشاف إيماءات اليد. يرجى السماح بالوصول إلى الكاميرا للمتابعة.</string>
    <string name="allow">سماح</string>
    <string name="cancel">إلغاء</string>
    <string name="permission_denied_title">الإذن مطلوب</string>
    <string name="permission_denied_message">لقد قمت برفض إذن الكاميرا. يرجى تمكينه من إعدادات التطبيق لاستخدام هذه الميزة.</string>
    <string name="open_settings">فتح الإعدادات</string>
    <string name="permission_required_toast">يتطلب هذا التطبيق إذن الكاميرا لاستخدامه</string>


    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>






</resources>
