<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <!-- 1) Welcome dialog as start -->
    <fragment
        android:id="@+id/welcomeDialogFragment"
        android:name="com.google.mediapipe.examples.gesturerecognizer.WelcomeDialogFragment"
        android:label="Welcome">
        <!-- AFTER OK → go to -->
        <action
            android:id="@+id/action_welcome_to_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/welcomeDialogFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <!-- 2) Camera (still accessible from your toolbar/menu) -->
    <fragment
        android:id="@+id/camera_fragment"
        android:name="com.google.mediapipe.examples.gesturerecognizer.fragment.CameraFragment"
        android:label="@string/menu_camera" />

    <!-- 3) Bottom-nav screens -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.google.mediapipe.examples.gesturerecognizer.HomeFragment"
        android:label="@string/home" />

    <fragment
        android:id="@+id/nav_dictionary"
        android:name="com.google.mediapipe.examples.gesturerecognizer.DictionaryFragment"
        android:label="@string/dictionary" />

    <fragment
        android:id="@+id/nav_translate"
        android:name="com.google.mediapipe.examples.gesturerecognizer.TranslatFragment"
        android:label="@string/translate" />

    <fragment
        android:id="@+id/nav_train"
        android:name="com.google.mediapipe.examples.gesturerecognizer.TrainFragment"
        android:label="@string/train" />

</navigation>
