<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:layout_gravity="center"
    android:elevation="20dp"
    app:cardCornerRadius="24dp"
    app:cardBackgroundColor="@color/mp_color_background"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_app_logo"
            android:contentDescription="@string/app_logo_desc"
            android:background="@drawable/logo_background"
            android:padding="10dp"
            android:elevation="6dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"/>


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/purple"
            android:layout_marginBottom="16dp"
            />

        <View
            android:layout_width="120dp"
            android:layout_height="2dp"
            android:background="@color/mp_color_primary"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textSize="16sp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:textColor="@color/text"
            android:paddingHorizontal="16dp"
            android:layout_marginBottom="32dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ok"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="56dp"
                android:text="@string/continue_text"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/text"
                android:backgroundTint="@color/purple"
                app:cornerRadius="16dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_no"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="56dp"
                android:text="لا"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/text"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="16dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
